[gd_scene load_steps=5 format=3 uid="uid://c865t2233rok3"]

[ext_resource type="Script" uid="uid://dumcxs0nacesf" path="res://construcao.gd" id="1_nbpwo"]
[ext_resource type="Texture2D" uid="uid://dp0q2hrfbqhmt" path="res://assets/Mapa/placa.png" id="2_j4whm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5bkyp"]
size = Vector2(135, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nbpwo"]
size = Vector2(102, 39)

[node name="Construcao" type="Area2D"]
script = ExtResource("1_nbpwo")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
texture = ExtResource("2_j4whm")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(6, 3)
shape = SubResource("RectangleShape2D_5bkyp")

[node name="LabelInteracao" type="Label" parent="."]
visible = false
offset_left = -5.0
offset_top = -40.0
offset_right = 35.0
offset_bottom = -17.0
text = "E"

[node name="FalaLabel" type="Label" parent="."]
offset_left = -1.0
offset_top = -60.0
offset_right = 103.0
offset_bottom = -37.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(5, 2)
shape = SubResource("RectangleShape2D_nbpwo")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
